Refactor code structure for improved readability and maintainability

--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="https://res.cloudinary.com/sproff/image/upload/c_crop,g_face,h_400,w_350/r_max/c_scale,w_200/Sproff/sam_u6e4sc.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Samuel Ogunleye Portfolio"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Samuel Ogunleye - Frontend Engineer</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+		<meta name="theme-color" content="#000000" />
+		<meta name="robots" content="index, follow" />
+		<meta
+			name="description"
+			content="Goodness Sewo is a software developer with over 4 years of experience building full-stack web and mobile apps. Specialized in JavaScript, React, Node.js, and scalable solutions."
+		/>
+		<meta
+			name="keywords"
+			content="Goodness Sewo, React Developer, Full-Stack Developer, JavaScript Engineer, MERN Stack, Remote Developer, Software Portfolio, Frontend Developer"
+		/>
+		<meta name="author" content="Goodness Sewo" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+		<!-- Open Graph (OG) for social media -->
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:title"
+			content="Goodness Sewo - Full-Stack Software Developer"
+		/>
+		<meta
+			property="og:description"
+			content="Explore the professional experience and projects of Goodness Sewo, a full-stack engineer experienced in React, Node.js, and scalable digital platforms."
+		/>
+		<meta
+			property="og:image"
+			content="https://res.cloudinary.com/dhlhdrh3i/image/upload/v1744335685/goodness1_bky6uw.jpg"
+		/>
+		<meta property="og:url" content="https://sewogoodness.xyz" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+		<!-- Twitter Card -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			name="twitter:title"
+			content="Goodness Sewo - Software Developer Portfolio"
+		/>
+		<meta
+			name="twitter:description"
+			content="Full-stack JavaScript developer with expertise in React, Node.js, and scalable app development. Explore Goodness Sewo's portfolio."
+		/>
+		<meta
+			name="twitter:image"
+			content="https://res.cloudinary.com/dhlhdrh3i/image/upload/v1744335685/goodness1_bky6uw.jpg"
+		/>
+
+		<!-- Favicon -->
+		<link
+			rel="icon"
+			href="https://res.cloudinary.com/dhlhdrh3i/image/upload/v1744335685/goodness1_bky6uw.jpg"
+		/>
+
+		<!-- Canonical -->
+		<link rel="canonical" href="https://sewogoodness.xyz" />
+
+		<title>Goodness Sewo | Full-Stack Developer Portfolio</title>
+	</head>
+	<body>
+		<noscript
+			>You need to enable JavaScript to view this site properly.</noscript
+		>
+		<div id="root"></div>
+	</body>
 </html>
