--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 			property="og:image"
 			content="https://res.cloudinary.com/dhlhdrh3i/image/upload/v1744335685/goodness1_bky6uw.jpg"
 		/>
-		<meta property="og:url" content="https://sewogoodness.xyz" />
+		<meta property="og:url" content="https://sewogoodness.vercel.app" />
 
 		<!-- Twitter Card -->
 		<meta name="twitter:card" content="summary_large_image" />
@@ -55,7 +55,7 @@
 		/>
 
 		<!-- Canonical -->
-		<link rel="canonical" href="https://sewogoodness.xyz" />
+		<link rel="canonical" href="https://sewogoodness.vercel.app" />
 
 		<title>Goodness Sewo | Full-Stack Developer Portfolio</title>
 	</head>
